--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -67,7 +67,7 @@ tooltip {
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
     transition: all 1s ease;
 }
-#workspaces button.active {
+#workspaces button.focused {
     color: @color9;
     border: none;
     text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
@@ -76,6 +76,7 @@ tooltip {
     color: rgba(0,0,0,0);
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .2);
+    transition: none;
 }
 #workspaces button.empty:hover {
     color: rgba(0,0,0,0);
@@ -83,11 +84,7 @@ tooltip {
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
     transition: all 1s ease;
 }
-#workspaces button.empty.active {
-    color: @color9;
-    border: none;
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
-}
+
 #bluetooth{
     padding: 0px 5px;
     transition: all .3s ease;
