--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,7 +2,7 @@
 
 * {
     font-size:16px;
-    font-family: "Iosevka Term";
+    font-family: "Iosevka Nerd Font";
 }
 window#waybar{
     all:unset;
