--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,111 +1,128 @@
-@import url('../../.cache/wal/colors-waybar.css');
+@define-color background #0d1117;
+@define-color foreground #c9d1d9;
+@define-color color0     #484f58;
+@define-color color1     #ff7b72;
+@define-color color2     #3fb950;
+@define-color color3     #d29922;
+@define-color color4     #58a6ff;
+@define-color color5     #bc8cff;
+@define-color color6     #39c5cf;
+@define-color color7     #b1bac4;
+@define-color color8     #6e7681;
+@define-color color9     #ffa198;
+@define-color color10    #56d364;
+@define-color color11    #e3b341;
+@define-color color12    #79c0ff;
+@define-color color13    #d2a8ff;
+@define-color color14    #56d4dd;
+@define-color color15    #f0f6fc;
 
 * {
-    font-size:16px;
-    font-family: "Iosevka Nerd Font";
+    font-size: 16px;
+    font-family: "Iosevka Nerd Font Propo";
 }
-window#waybar{
-    all:unset;
+
+window#waybar {
+    all: unset;
+    background: alpha(@background, 1);
+    padding: 5px 10px;
+    margin: 8px;
+    box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.6);
+    color: @foreground;
 }
-.modules-left {
-    padding:7px;
-    margin:10 0 5 10;
-    border-radius:10px;
-    background: alpha(@background,.6);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
-}
-.modules-center {
-    padding:7px;
-    margin:10 0 5 0;
-    border-radius:10px;
-    background: alpha(@background,.6);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
-}
+
+/* Single unified bar */
+.modules-left,
+.modules-center,
 .modules-right {
-    padding:7px;
-    margin: 10 10 5 0;
-    border-radius:10px;
-    background: alpha(@background,.6);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, .6);
+    background: transparent;
+    padding: 0;
+    margin: 0;
+    box-shadow: none;
 }
+
+/* Tooltips */
 tooltip {
-    background:@background;
+    background: @background;
     color: @color7;
 }
-#clock:hover, #custom-pacman:hover, #custom-notification:hover,#bluetooth:hover,#pulseaudio:hover,#network:hover,#battery:hover, #cpu:hover,#memory:hover,#temperature:hover{
-    transition: all .3s ease;
-    color:@color9;
-}
-#custom-notification {
-    padding: 0px 5px;
-    transition: all .3s ease;
-    color:@color7;
-}
-#clock{
-    padding: 0px 5px;
-    color:@color7;
-    transition: all .3s ease;
-}
-#custom-pacman{
-    padding: 0px 5px;
-    transition: all .3s ease;
-    color:@color7;
 
+/* Hoverable modules */
+#clock, #custom-pacman, #custom-notification, #bluetooth, #pulseaudio, #network, #battery, #cpu, #memory, #temperature {
+    padding: 0px 6px;
+    color: @color7;
+    transition: all 0.3s ease;
 }
+
+#clock:hover,
+#custom-pacman:hover,
+#custom-notification:hover,
+#bluetooth:hover,
+#pulseaudio:hover,
+#network:hover,
+#battery:hover,
+#cpu:hover,
+#memory:hover,
+#temperature:hover {
+    color: @color9;
+}
+
+/* Workspaces */
 #workspaces {
     padding: 0px 5px;
 }
+
 #workspaces button {
-    all:unset;
+    all: unset;
     padding: 0px 5px;
-    color: alpha(@color9,.4);
-    transition: all .2s ease;
+    color: alpha(@color9, 0.4);
+    transition: all 0.2s ease;
 }
+
 #workspaces button:hover {
-    color:rgba(0,0,0,0);
-    border: none;
-    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0, 0);
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.5);
     transition: all 1s ease;
 }
+
 #workspaces button.focused {
     color: @color9;
-    border: none;
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, .5);
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
 }
+
 #workspaces button.empty {
-    color: rgba(0,0,0,0);
-    border: none;
-    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .2);
+    color: rgba(0, 0, 0, 0);
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.2);
     transition: none;
 }
+
 #workspaces button.empty:hover {
-    color: rgba(0,0,0,0);
-    border: none;
-    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, .5);
+    color: rgba(0, 0, 0, 0);
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.5);
     transition: all 1s ease;
 }
 
-#bluetooth{
-    padding: 0px 5px;
-    transition: all .3s ease;
-    color:@color7;
-
-}
-
+/* Individual modules */
+#custom-notification,
+#custom-pacman,
+#custom-expand,
+#custom-colorpicker,
+#cpu,
+#memory,
+#temperature,
+#group-expand,
+#tray,
+#battery,
+#bluetooth,
 #pulseaudio,
-#network{
-    padding: 0px 5px;
-    transition: all .3s ease;
-    color:@color7;
-
+#network,
+#custom-endpoint {
+    padding: 0px 6px;
+    transition: all 0.3s ease;
+    color: @color7;
 }
-#battery{
-    padding: 0px 5px;
-    transition: all .3s ease;
-    color:@color7;
 
-
-}
+/* Charging status */
 #battery.charging {
     color: #26A65B;
 }
@@ -122,45 +139,21 @@ tooltip {
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
-#group-expand{
-    padding: 0px 5px;
-    transition: all .3s ease; 
-}
-#custom-expand{
-    padding: 0px 5px;
-    color:alpha(@foreground,.2);
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, .7);
-    transition: all .3s ease; 
-}
-#custom-expand:hover{
-    color:rgba(255,255,255,.2);
-    text-shadow: 0px 0px 2px rgba(255, 255, 255, .5);
-}
-#custom-colorpicker{
-    padding: 0px 5px;
-}
-#cpu,#memory,#temperature{
-    padding: 0px 5px;
-    transition: all .3s ease; 
-    color:@color7;
 
-}
-#custom-endpoint{
-    color:transparent;
+/* Custom endpoint (invisible but glowy) */
+#custom-endpoint {
+    color: transparent;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 1);
-
 }
-#tray{
-    padding: 0px 5px;
-    transition: all .3s ease; 
 
-}
+/* Tray dropdowns */
 #tray menu * {
     padding: 0px 5px;
-    transition: all .3s ease; 
+    transition: all 0.3s ease;
 }
 
 #tray menu separator {
     padding: 0px 5px;
-    transition: all .3s ease; 
+    transition: all 0.3s ease;
 }
+
